--- a/package.json
+++ b/package.json
@@ -1,18 +1,20 @@
 {
-  "name": "squashql-codegen",
+  "name": "@squashql/squashql-codegen",
   "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "description": "SquashQL cli to generate Typescript classes reprensenting database tables",
+  "main": "./build/index.js",
+  "bin": {
+    "squashql-codegen": "./build/index.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rimraf ./build && tsc"
   },
-  "bin": {
-    "squashql-codegen": "./index.js"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "keywords": [
+    "cli"
+  ],
+  "author": "SquashQL Labs",
+  "license": "Apache-2.0",
   "devDependencies": {
     "@types/lodash": "^4.14.196",
     "@types/node": "^20.4.5",
@@ -21,6 +23,7 @@
   },
   "dependencies": {
     "@google-cloud/bigquery": "^7.0.0",
+    "dotenv": "^16.3.1",
     "lodash": "^4.17.21"
   }
 }
