--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
   "devDependencies": {
     "@types/lodash": "^4.14.196",
     "@types/node": "^20.4.5",
+    "@types/snowflake-sdk": "^1.6.13",
     "rimraf": "^5.0.1",
     "typescript": "^5.1.6"
   },
   "dependencies": {
     "@google-cloud/bigquery": "^7.0.0",
     "dotenv": "^16.3.1",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "snowflake-sdk": "^1.7.0",
+    "ts-node": "^10.9.1"
   }
 }
