--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@squashql/squashql-codegen",
-  "version": "1.0.3",
+  "version": "1.0.4",
   "description": "SquashQL CLI to generate type definitions representing tables from your database",
   "main": "./build/index.js",
+  "types": "./build/index.d.ts",
   "bin": {
     "squashql-codegen": "./build/index.js"
   },
