--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.6",
   "description": "SquashQL CLI to generate type definitions representing tables from your database",
   "main": "./build/index.js",
-  "types": "./build/index.d.ts",
+  "types": "./build/types.d.ts",
   "bin": {
     "squashql-codegen": "./build/index.js"
   },
